--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="w-col w-col-8"><img
                         src="MS-complications.jpg"
                         loading="lazy"
-                        srcset="MS-complications.jpg 500w, MS-complications.JPG 800w, MS-complications.JPG 1080w, MS-complications.JPG 1500w"
+                        srcset="MS-complications.jpg 500w, MS-complications.jpg 800w, MS-complications.jpg 1080w, MS-complications.jpg 1500w"
                         sizes="(max-width: 4000px) 96vw, (max-width: 767px) 97vw, (max-width: 2307px) 65vw, 1500px"
                         alt="" class="image-34" /></div>
                 <div class="column-7 w-col w-col-4">
